Added data preparation

--- a/Telco.ipynb
+++ b/Telco.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "<script>\n",
     "  function code_toggle() {\n",
@@ -26,14 +29,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Introduction"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "In this project, we will be looking at the '3G Public Cellular Mobile Telephone Services - Nationwide Service Coverage' data set available on the Data.gov.sg website (2017). We want to see how we can fit a multivariate time series model on the data, and use our model for forecasting. Here, our data set covers the period between 2013 April and 2016 June for the 3 Singapore telephone companies (telcos), Singtel, M1 and Starhub.\n",
     "\n",
@@ -42,23 +51,31 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Exploratory Data Analysis"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "We would first like to import the data from the `csv` file that can be downloaded from the website."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 154,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -166,7 +183,7 @@
        "9  2013-07  Singtel             99.33"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,6 +193,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates\n",
+    "from datetime import datetime\n",
+    "import numpy as np\n",
     "\n",
     "#Importing data from csv file into a pandas dataframe\n",
     "data = pd.read_csv('Telco.csv')\n",
@@ -184,7 +203,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "For our purposes, we will have to reshape the matrix to an  $n×k$  array, where  $n$  is the number of time periods observed, and  $k$  is the number of variables, in this case 3."
    ]
@@ -193,7 +215,9 @@
    "cell_type": "code",
    "execution_count": 138,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -280,7 +304,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The count of service_coverage is 117, which means there are 39 observations for each telco, which corresponds with the time period we mentioned in the introduction."
    ]
@@ -289,7 +316,9 @@
    "cell_type": "code",
    "execution_count": 139,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -313,14 +342,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Lastly, we note that there is no missing data."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "We now wish to visualise our data in a plot. We do this by first converting the month column to datetime, and then using the `pivot` function "
    ]
@@ -329,7 +364,9 @@
    "cell_type": "code",
    "execution_count": 140,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -373,40 +410,80 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "Looking at the plot, we see that M1 went through an upgrading exercise in 2013 due to its poor (by Singaporean standards) performance (2013). To prevent this from skewing our model, we will only take the time period from January 2014 onwards."
+    "Looking at the plot, we see that M1 had poor performance (by Singaporean standards) in 2013, which could be because it was going through an upgrading exercise (2013). To prevent this from skewing our model, we will only take the time period from November 2013 onwards.\n",
+    "\n",
+    "In addition, we also notice that for most of 2014 and 2015, the peaks and troughs of the 3 telcos are largely synchronised. We hope that this feature will be reflected in our time series model."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Data Preparation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As mentioned above we would like to remove the outlier time period, and thus begin observations from January 2014. We would also like to be able to use our model for forecasting, so we will use January to June 2016 as test data. Now, we reshape the data into the $n\\times k$ ndarray as required."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimension of train_array is (26, 3)\n",
+      "Dimension of test_array is (6, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Remove outlier dates\n",
+    "data3 = data2[data2['month'] >datetime.strptime('Nov 2013', '%b %Y')]\n",
+    "#Subset train and test data\n",
+    "train_data = data3[data3['month'] < datetime.strptime('Jan 2016', '%b %Y')]\n",
+    "test_data = data3[data3['month'] >= datetime.strptime('Jan 2016', '%b %Y')]\n",
+    "#Convert data to ndarray\n",
+    "train_array = np.array(train_data.drop('month', axis=1))\n",
+    "test_array = np.array(test_data.drop('month', axis=1))\n",
+    "print('Dimension of train_array is', np.shape(train_array))\n",
+    "print('Dimension of test_array is', np.shape(test_array))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# References"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     " 1. Government of Singapore. (2017, March). *3G Public Cellular Mobile Telephone Services - Nation-wide Service Coverage*. Retrieved from https://data.gov.sg/dataset/3g-public-cellular-mobile-telephone-services-nation-wide-service-coverage?view_id=d2892dc6-7bcb-4a57-bac7-ed3650415204&resource_id=c7f2dc9d-a1b8-4fca-99fa-91a4ade199d4.\n",
     " 2. Said, C. (2016, February). *How to make polished Jupyter presentations with optional code visibility*. Retrieved from http://chris-said.io/2016/02/13/how-to-make-polished-jupyter-presentations-with-optional-code-visibility/.\n",
     " 3. M1. (2013, May). *M1 expands and upgrades 3G network*. Retrieved from https://www.m1.com.sg/AboutM1/NewsReleases/2013/M1%20expands%20and%20upgrades%203G%20network.aspx"
    ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
