Started time series section

--- a/Telco.ipynb
+++ b/Telco.ipynb
@@ -422,14 +422,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Data Preparation"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "As mentioned above we would like to remove the outlier time period, and thus begin observations from January 2014. We would also like to be able to use our model for forecasting, so we will use January to June 2016 as test data. Now, we reshape the data into the $n\\times k$ ndarray as required."
    ]
@@ -438,7 +444,9 @@
    "cell_type": "code",
    "execution_count": 167,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -465,6 +473,20 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Time Series"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From here on, we will fit the data as a time series, broadly adopting the methodology illustrated on the Stats Models website (Perktold, Seabold & Taylor, 2017), and with some theory detailed in 'New Introduction to Multiple Time Series Analysis' (Lütkepohl, 2005)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
@@ -482,8 +504,19 @@
    "source": [
     " 1. Government of Singapore. (2017, March). *3G Public Cellular Mobile Telephone Services - Nation-wide Service Coverage*. Retrieved from https://data.gov.sg/dataset/3g-public-cellular-mobile-telephone-services-nation-wide-service-coverage?view_id=d2892dc6-7bcb-4a57-bac7-ed3650415204&resource_id=c7f2dc9d-a1b8-4fca-99fa-91a4ade199d4.\n",
     " 2. Said, C. (2016, February). *How to make polished Jupyter presentations with optional code visibility*. Retrieved from http://chris-said.io/2016/02/13/how-to-make-polished-jupyter-presentations-with-optional-code-visibility/.\n",
-    " 3. M1. (2013, May). *M1 expands and upgrades 3G network*. Retrieved from https://www.m1.com.sg/AboutM1/NewsReleases/2013/M1%20expands%20and%20upgrades%203G%20network.aspx"
+    " 3. M1. (2013, May). *M1 expands and upgrades 3G network*. Retrieved from https://www.m1.com.sg/AboutM1/NewsReleases/2013/M1%20expands%20and%20upgrades%203G%20network.aspx\n",
+    " 4. Perktold, J, Seabold, S & Taylor, J. (2017). *Vector Autoregressions tsa.vector_ar*. Retrieved from https://www.statsmodels.org/dev/vector_ar.html.\n",
+    " 5. Lütkepohl, H. (2005). *New Introduction to Multiple Time Series Analysis*. Berlin: Springer."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
