Completed Model Summary and Lag Order Selection

--- a/Telco.ipynb
+++ b/Telco.ipynb
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 374,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 375,
    "metadata": {
     "collapsed": false
    },
@@ -611,8 +611,8 @@
        "==================================\n",
        "Model:                         VAR\n",
        "Method:                        OLS\n",
-       "Date:           Sun, 25, Nov, 2018\n",
-       "Time:                     22:39:54\n",
+       "Date:           Tue, 27, Nov, 2018\n",
+       "Time:                     01:21:18\n",
        "--------------------------------------------------------------------\n",
        "No. of Equations:         3.00000    BIC:                   -10.5108\n",
        "Nobs:                     26.0000    HQIC:                  -10.9243\n",
@@ -657,7 +657,7 @@
        "\n"
       ]
      },
-     "execution_count": 341,
+     "execution_count": 375,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,15 +666,54 @@
     "#Create VAR object\n",
     "train_model = VAR(train_array)\n",
     "#Fit VAR(1) model\n",
-    "train_results = train_model.fit(1)\n",
-    "train_results.summary()"
+    "train_VAR1 = train_model.fit(1)\n",
+    "train_VAR1.summary()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The table above is quite informative. It shows that we have obtained the coefficients using ordinary least squares regression. We also see that it has provided us for several possible criteria for model selection, such as the Akaike Information Criterion (AIC), the Bayesian Information Criterion (BIC) and Akaike's Final Prediction Error (FPE). Below this, we see the regression coefficients, standard errors, t-statistics and p-values for each of the predictor variables. Unfortunately, none of the coefficients seem to be significant. Lastly, we have the correlation matrix of the residuals."
+    "The table above is quite informative. It shows that we have obtained the coefficients using ordinary least squares regression. We also see that it has provided us for several possible criteria for model selection, such as the Akaike Information Criterion (AIC), the Bayesian Information Criterion (BIC) and Akaike's Final Prediction Error (FPE). Below this, we see the regression coefficients, standard errors, t-statistics and p-values for each of the predictor variables. Unfortunately, none of the coefficients seem to be significant. Lastly, we have the correlation matrix of the residuals.\n",
+    "\n",
+    "The above fit is obtained using ordinary least squares estimation. If we define $Y$ and $Z$ as follows,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "Y = \\begin{pmatrix} y_{1,1} & \\dots & y_{1,t} \\\\ \\vdots & & \\vdots \\\\ y_{k,1} & \\dots & y_{k,t}\n",
+    "\\end{pmatrix}\n",
+    "\\end{align},\\quad  Z = \\begin{pmatrix} 1 \\\\ y_{1,t} \\\\ \\vdots \\\\ y_{k,t} \\\\ y_{1,t-1} \\\\ \\vdots \\\\ y_{k,t-p+1} \\end{pmatrix}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can then form the least squares estimator of the coefficients $\\hat{B}$ and the unbiased estimator covariance matrix $\\hat{\\Sigma}_{u}$, "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "\\hat{B}= YZ^{T}\\left(ZZ^{T}\\right)^{-1}, \\quad \\hat{\\Sigma}_{u}=\\frac{1}{t-kp-1}Y\\left(I_{t}-Z^{T}\\left(ZZ^{T}\\right)^{-1}Z\\right)Y^{T}\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $Z^{T}$ indicates the transpose of $Z$. "
    ]
   },
   {
@@ -688,7 +727,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to fit the model, we first need to choose the lag order for our model, ie select $p$ for the VAR$\\left(p\\right)$ model. We can do this by using the `select_order` method, and choosing $p$ which minimises the AIC. \n",
+    "In order to fit the model, we first need to choose the lag order for our model, ie select $p$ for the VAR$\\left(p\\right)$ model. We can do this by using the `select_order` method, and choosing $p$ which minimises the AIC. Due to the lack of data, we will use a maximum lag order of 6.\n",
     "\n",
     "The AIC is defined as follows,"
    ]
@@ -699,8 +738,8 @@
    "source": [
     "$$\n",
     "\\begin{aligned}\n",
-    "\\text{AIC}\\left(p\\right) &= \\log \\left|\\tilde{\\Sigma_{u}}\\left(p\\right)\\right|+\\frac{2\\dot\\times\\left(\\text{Number of freely estimated parameters}\\right)}{t} \\\\\n",
-    "&= \\log \\left|\\tilde{\\Sigma_{u}}\\left(p\\right)\\right|+\\frac{2pk^{2}}{t}\n",
+    "\\text{AIC}\\left(p\\right) &= \\log \\left|\\tilde{\\Sigma}_{u}\\left(p\\right)\\right|+\\frac{2\\dot\\times\\left(\\text{Number of freely estimated parameters}\\right)}{t} \\\\\n",
+    "&= \\log \\left|\\tilde{\\Sigma}_{u}\\left(p\\right)\\right|+\\frac{2pk^{2}}{t}\n",
     "\\end{aligned}\n",
     "$$"
    ]
@@ -709,12 +748,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\tilde{\\Sigma_{u}}\\left(p\\right)$ is the covariance matrix from the least squares estimate. If we define the following terms,"
+    "where $\\tilde{\\Sigma}_{u}\\left(p\\right)$ is the maximum likelihood estimate of the covariance matrix. $\\tilde{\\Sigma}_{u}$ is related to $\\hat{\\Sigma}_{u}$ by a factor, $\\hat{\\Sigma}_{u} = \\frac{t}{t-kp-1}\\tilde{\\Sigma}_{u}$. However, both estimators are asymptotically equivalent"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 376,
    "metadata": {
     "collapsed": false
    },
@@ -723,22 +762,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                 VAR Order Selection                  \n",
-      "======================================================\n",
-      "            aic          bic          fpe         hqic\n",
-      "------------------------------------------------------\n",
-      "0        -12.08       -11.93    5.679e-06       -12.06\n",
-      "1        -11.55       -10.96    9.893e-06       -11.49\n",
-      "2        -11.73       -10.70    9.410e-06       -11.63\n",
-      "3        -11.93       -10.46    1.111e-05       -11.78\n",
-      "4        -14.86       -12.95    1.509e-06       -14.67\n",
-      "5        -99.15       -96.80    1.103e-41       -98.92\n",
-      "6        -174.1       -171.3  -1.754e-75*       -173.8\n",
-      "7       -177.9*      -174.7*   -1.114e-78      -177.6*\n",
-      "8        -175.8       -172.1   -9.840e-79       -175.4\n",
-      "9        -176.6       -172.5   -7.259e-80       -176.2\n",
-      "10       -176.1       -171.5   -2.479e-80       -175.6\n",
-      "======================================================\n",
+      "                 VAR Order Selection                 \n",
+      "=====================================================\n",
+      "           aic          bic          fpe         hqic\n",
+      "-----------------------------------------------------\n",
+      "0       -11.59       -11.44    9.234e-06       -11.56\n",
+      "1       -11.05       -10.46    1.605e-05       -10.92\n",
+      "2       -11.09       -10.05    1.646e-05       -10.87\n",
+      "3       -11.43       -9.935    1.401e-05       -11.10\n",
+      "4       -11.72       -9.779    1.523e-05       -11.30\n",
+      "5       -12.82       -10.43    1.134e-05       -12.30\n",
+      "6      -49.58*      -46.75*   1.029e-20*      -48.97*\n",
+      "=====================================================\n",
       "* Minimum\n",
       "\n"
      ]
@@ -746,18 +781,140 @@
     {
      "data": {
       "text/plain": [
-       "{'aic': 7, 'bic': 7, 'fpe': 6, 'hqic': 7}"
+       "{'aic': 6, 'bic': 6, 'fpe': 6, 'hqic': 6}"
       ]
      },
-     "execution_count": 344,
+     "execution_count": 376,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_model = VAR(train_array)\n",
-    "train_results = train_model.select_order(10)\n",
-    "train_results"
+    "train_selection = train_model.select_order(6)\n",
+    "train_selection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that the AIC is minimised at $p=6$. We shall use this for our forecasting in the next section."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 377,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "  Summary of Regression Results   \n",
+       "==================================\n",
+       "Model:                         VAR\n",
+       "Method:                        OLS\n",
+       "Date:           Tue, 27, Nov, 2018\n",
+       "Time:                     01:21:30\n",
+       "--------------------------------------------------------------------\n",
+       "No. of Equations:         3.00000    BIC:                   -46.7463\n",
+       "Nobs:                     21.0000    HQIC:                  -48.9661\n",
+       "Log likelihood:           488.212    FPE:                1.02932e-20\n",
+       "AIC:                     -49.5814    Det(Omega_mle):     1.05959e-21\n",
+       "--------------------------------------------------------------------\n",
+       "Results for equation y1\n",
+       "========================================================================\n",
+       "           coefficient       std. error           t-stat            prob\n",
+       "------------------------------------------------------------------------\n",
+       "const      -164.990694       264.920984           -0.623           0.597\n",
+       "L1.y1        -0.121107         1.330723           -0.091           0.936\n",
+       "L1.y2        -0.991691         1.360311           -0.729           0.542\n",
+       "L1.y3         1.442403         0.847115            1.703           0.231\n",
+       "L2.y1         0.468266         1.008615            0.464           0.688\n",
+       "L2.y2        -1.504384         1.172623           -1.283           0.328\n",
+       "L2.y3         0.969977         1.987887            0.488           0.674\n",
+       "L3.y1        -0.323722         0.698266           -0.464           0.688\n",
+       "L3.y2         0.130921         1.915842            0.068           0.952\n",
+       "L3.y3         0.517777         1.050089            0.493           0.671\n",
+       "L4.y1         0.050676         0.569543            0.089           0.937\n",
+       "L4.y2        -0.262310         0.984914           -0.266           0.815\n",
+       "L4.y3         0.976737         1.469907            0.664           0.575\n",
+       "L5.y1         0.615567         0.768598            0.801           0.507\n",
+       "L5.y2        -0.625361         0.973847           -0.642           0.587\n",
+       "L5.y3         0.524566         0.790311            0.664           0.575\n",
+       "L6.y1         0.310463         0.871717            0.356           0.756\n",
+       "L6.y2         0.062337         1.191737            0.052           0.963\n",
+       "L6.y3         0.405810         1.715769            0.237           0.835\n",
+       "========================================================================\n",
+       "\n",
+       "Results for equation y2\n",
+       "========================================================================\n",
+       "           coefficient       std. error           t-stat            prob\n",
+       "------------------------------------------------------------------------\n",
+       "const      -146.054070       115.098520           -1.269           0.332\n",
+       "L1.y1        -0.427449         0.578151           -0.739           0.537\n",
+       "L1.y2        -0.478056         0.591005           -0.809           0.504\n",
+       "L1.y3         0.546340         0.368041            1.484           0.276\n",
+       "L2.y1         0.521161         0.438206            1.189           0.356\n",
+       "L2.y2        -1.224993         0.509462           -2.404           0.138\n",
+       "L2.y3         1.243198         0.863665            1.439           0.287\n",
+       "L3.y1         0.253447         0.303371            0.835           0.491\n",
+       "L3.y2        -0.220883         0.832364           -0.265           0.816\n",
+       "L3.y3         0.673954         0.456225            1.477           0.278\n",
+       "L4.y1        -0.082220         0.247446           -0.332           0.771\n",
+       "L4.y2         0.598494         0.427909            1.399           0.297\n",
+       "L4.y3         0.141165         0.638621            0.221           0.846\n",
+       "L5.y1         0.253757         0.333928            0.760           0.527\n",
+       "L5.y2        -0.606060         0.423101           -1.432           0.288\n",
+       "L5.y3         0.783224         0.343362            2.281           0.150\n",
+       "L6.y1         0.519212         0.378729            1.371           0.304\n",
+       "L6.y2        -0.581643         0.517766           -1.123           0.378\n",
+       "L6.y3         0.545909         0.745439            0.732           0.540\n",
+       "========================================================================\n",
+       "\n",
+       "Results for equation y3\n",
+       "========================================================================\n",
+       "           coefficient       std. error           t-stat            prob\n",
+       "------------------------------------------------------------------------\n",
+       "const       132.345136       134.530375            0.984           0.429\n",
+       "L1.y1        -0.371946         0.675759           -0.550           0.637\n",
+       "L1.y2        -0.298588         0.690784           -0.432           0.708\n",
+       "L1.y3        -0.200789         0.430176           -0.467           0.687\n",
+       "L2.y1         0.423345         0.512188            0.827           0.495\n",
+       "L2.y2        -0.713025         0.595474           -1.197           0.354\n",
+       "L2.y3         0.768631         1.009475            0.761           0.526\n",
+       "L3.y1         0.042475         0.354589            0.120           0.916\n",
+       "L3.y2        -0.032888         0.972890           -0.034           0.976\n",
+       "L3.y3        -0.152169         0.533249           -0.285           0.802\n",
+       "L4.y1        -0.552834         0.289222           -1.911           0.196\n",
+       "L4.y2         0.739279         0.500152            1.478           0.277\n",
+       "L4.y3         0.209342         0.746438            0.280           0.805\n",
+       "L5.y1        -0.286663         0.390304           -0.734           0.539\n",
+       "L5.y2        -0.446261         0.494532           -0.902           0.462\n",
+       "L5.y3         0.365558         0.401331            0.911           0.459\n",
+       "L6.y1         0.322410         0.442669            0.728           0.542\n",
+       "L6.y2        -0.750407         0.605180           -1.240           0.341\n",
+       "L6.y3         0.603422         0.871290            0.693           0.560\n",
+       "========================================================================\n",
+       "\n",
+       "Correlation matrix of residuals\n",
+       "            y1        y2        y3\n",
+       "y1    1.000000  0.566671  0.579503\n",
+       "y2    0.566671  1.000000 -0.343103\n",
+       "y3    0.579503 -0.343103  1.000000\n",
+       "\n"
+      ]
+     },
+     "execution_count": 377,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Fit VAR(6) model\n",
+    "train_VAR6 = train_model.fit(6)\n",
+    "train_VAR6.summary()"
    ]
   },
   {
@@ -783,17 +940,6 @@
     " 4. Perktold, J, Seabold, S & Taylor, J. (2017). *Vector Autoregressions tsa.vector_ar*. Retrieved from https://www.statsmodels.org/dev/vector_ar.html.\n",
     " 5. Lütkepohl, H. (2005). *New Introduction to Multiple Time Series Analysis*. Berlin: Springer."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
